Mon Sep 20  1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSPanel.m: Remove unnecessary -center messages.
	* Source/NSApplication.m: Add explanatory comment about centering.

Mon Sep 20  1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSApplication.m ([-runModalForWindow:]): Automatically
	invoke [-center] on the window, if the window is a panel.
	(following the spec for NSWindow's center method.)  
	* Source/NSSavePanel.m ([-runModalForDirectory:path:filename]):
	Simplified, removed some useless comands:  NSApplication's 
	-runModalForWindow: already both centers and
	makeKeyAndOrderFronts the panel, as required by the specs.

Sat Sep 18  1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSView.m: Applied N. Pero's fix for lockFocus.

Sat Sep 18  1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSFormCell.m ([-initTextCell:]): Follow the doc: init
	bezeled. ([-drawWithFrame:inView:]): Tiny fix to have some space
	between title and text.	([-cellSize]): New method

Thu Sep 16  8:38:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBrowserCell.m: Fix for positioning of leaf images.

Thu Sep 16  7:11:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBrowser.m: ([-setPath:]) ensure column zero is loaded - patch
	from Tim Bissell.

1999-09-13  Pedro Ivo Andrade Tavares  <ptavares@iname.com>

        * NSScreen.m: added the Mac OS X messages -visibleFrame: and
        -supportedWindowDepths. The messages are not generalized right now.

1999-09-14  Adam Fedor  <fedor@gnu.org>

	* Source/NSCell.m ([NSCell
	-trackMouse:inRect:ofView:untilMouseUp:]): Remove setNeedsDisplay
	(bug reintroduced again inadvertantly).

1999-09-08  Adam Fedor  <fedor@gnu.org>

	* Model/GMAppKit.m: Undef implementation of NSPopUpButton.
	* Model/IBClasses.h: Interface for NSMenuTemplate.
	* Model/IBClasses.m: Add code to retain NSMenuTemplate if it's